# eYRC-2023_Hologlyph_Bots

./: README.md
Task_1B/Task_1B/launch/: gazebo.launch.py
Task_1B/Task_1B/my_robot_interfaces/srv/: NextGoal.srv
Task_1B/Task_1B/script/: service_node.py
hb_bot/: CMakeLists.txt  package.xml
hb_bot/launch/: Spawn_bot.launch.py  multi_bot_spawn.launch.py
hb_bot/meshes/: bot_1.dae  bot_2.dae  bot_3.dae
hb_bot/urdf/: hb_bot_1.urdf.xacro  hb_bot_2.urdf.xacro  hb_bot_3.urdf.xacro  materials.xacro
hb_task1b_ws/src/hb_task_1b/: package.xml  setup.cfg  setup.py
hb_task1b_ws/src/hb_task_1b/meshes/: base.dae
hb_task1b_ws/src/hb_task_1b/urdf/: hb_bot.urdf.xacro  materials.xacro
hb_task1b_ws/src/hb_task_1b/worlds/: gazebo.world
hb_task1b_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
hb_task2a/: package.xml  setup.cfg  setup.py
hb_task2a/launch/: submission.launch.py  task2a.launch.py
hb_task2a/scripts/: controller.py  feedback.py  service_node.py
hb_task2b/: package.xml  setup.cfg  setup.py
hb_task2b/hb_task2b/: bot_controller.py  feedback.py  nextGoalPub.py
hb_task2b/launch/: controller.launch.py  submission.launch.py  task2b.launch.py
hb_world/: CMakeLists.txt  package.xml
hb_world/launch/: world.launch.py
hb_world/models/arena/: model.config  model.sdf
hb_world/models/arena/meshes/: arena.dae
hb_world/models/e_camera/: model.config  model.sdf
hb_world/models/e_camera/meshes/: camera.dae
hb_world/models/ground_surface/: model.config  model.sdf
hb_world/models/ground_surface/meshes/: ground_surface.dae
hb_world/worlds/: gazebo.world
my_robot_interfaces/: CMakeLists.txt
my_robot_interfaces/msg/: Goal.msg  Shape.msg
